--- a/dashboard.html
+++ b/dashboard.html
@@ -32,7 +32,8 @@
                 <a  href="add-transaction.html" ><i class="bi bi-arrow-left-right"></i> Transactions</a>
                 <a href="budgets.html"><i class="bi bi-pie-chart"></i> Budgets</a>
                 <a href="reports.html"><i class="bi bi-graph-up"></i> Reports</a>
-                <a href="settings.html"><i class="bi bi-gear"></i> Settings</a>
+                <a href="bills.html" ><i class="bi bi-calendar-check"></i> Bills</a>
+                <a href="savings.html"><i class="bi bi-bullseye"></i> Savings</a>
             </nav>
 
             <button class="add-transaction">
@@ -46,7 +47,7 @@
             <!-- TOP BAR -->
             <header class="topbar">
                 <div>
-                    <h2>Financial Overview</h2>
+                    <h1>Financial Overview</h1>
                     <p>Welcome back, here's what's happening today.</p>
                 </div>
 
