--- a/bills.html
+++ b/bills.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Bill Reminders & Calendar | FinTrack</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -42,6 +44,7 @@
             <div class="container">
                 <!-- ================= TOPBAR ================= -->
                 <header class="topbar">
+                  <i class="bi bi-list menu-icon" onclick="toggleSidebar()"></i>
                     <div>
                         <h1>Bill Reminders & Calendar</h1>
                         <p>Track your spending and never miss a payment deadline.</p>
@@ -283,6 +286,12 @@
 
             </div>
         </main>
+        <script>
+function toggleSidebar() {
+  document.querySelector('.sidebar').classList.toggle('show');
+}
+</script>
+
     </div>
 
 </body>
