--- a/dashboard.html
+++ b/dashboard.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>FinTrack | Dashboard</title>
 
     <!-- Bootstrap Icons -->
@@ -46,6 +48,7 @@
 
             <!-- TOP BAR -->
             <header class="topbar">
+                 <i class="bi bi-list menu-icon" onclick="toggleSidebar()"></i>
                 <div>
                     <h1>Financial Overview</h1>
                     <p>Welcome back, here's what's happening today.</p>
@@ -182,6 +185,11 @@
             </section>
 
         </main>
+        <script>
+function toggleSidebar() {
+  document.querySelector('.sidebar').classList.toggle('show');
+}
+</script>
 
     </div>
 
