--- a/savings.html
+++ b/savings.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Savings Goals | FinTrack</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -43,6 +45,7 @@
 
                 <!-- PAGE HEADER -->
                 <header class="topbar">
+                    <i class="bi bi-list menu-icon" onclick="toggleSidebar()"></i>
                     <div>
                         <h1>Savings Goals</h1>
                         <p>Track your progress towards your financial milestones.</p>
@@ -237,6 +240,12 @@
             document.getElementById(id).classList.add('active');
             el.classList.add('active');
         }
+        
+function toggleSidebar() {
+  document.querySelector('.sidebar').classList.toggle('show');
+}
+
+
     </script>
 
 </body>
